# grpc-playground

./: Cargo.toml  README.md  run.sh
.github/workflows/: pull-check.yml  vulnerability-check.yml
client/: Cargo.toml  build.rs
client/proto/: engine.proto  point.proto
client/src/: main.rs
engine/: Cargo.toml  build.rs
engine/proto/: earth.proto
engine/src/: client.rs  engine.rs  main.rs  server.rs
engine/src/client/: earth.rs
server/: Cargo.toml  build.rs
server-earth/: Cargo.toml  build.rs
server-earth/src/: main.rs
server/src/: main.rs
