[package]
name = "engine"
edition = "2021"

[dependencies]
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tonic = "0.12.3"
tokio-util = "0.7.12"
crossbeam-channel = "0.5"
ctrlc = "3.4.5"
tracing = { version = "0.1.40", default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
tokio-console = "0.1"
console-subscriber = "0.4.1"


[build-dependencies]
tonic-build = "0.12.3"